# KeyRemapper

./: CMakeLists.txt  ExtraInfo.cpp  KeyHandler.cpp  KeyRemapper.vcxproj  KeyRemapper.vcxproj.filters  README.md  Switcher.cpp  SwitchersStorage.cpp  SwitchersStorageCreator.cpp  Test.cpp
Debug/: vc142.idb
Debug/KeyRemapper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  KeyRemapper.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ExampleControl/: CMakeLists.txt  ExampleControl.cpp  config.json
KeyRemapper/: CMakeLists.txt
KeyRemapper/include/: Emuns.h  Enums.h  IKeyEventReplacer.h  IKeyHandler.h  ILowLevelProcObserver.h  ILowLevelProcSubject.h  KeyHandler.h  KeyRemapper.h  KeyRemapperCreator.h  LowLevelProcObserver.h  LowLevelProcSubject.h  Switcher.h  SwitchersStorage.h  SwitchersStorageCreator.h
KeyRemapper/include/Keyboard/: KeyboardKeyEventReplacer.h  KeyboardKeyHandler.h
KeyRemapper/include/Mouse/: MouseKeyEventReplacer.h  MouseKeyHandler.h
KeyRemapper/src/: Enums.cpp  KeyHandler.cpp  KeyRemapper.cpp  KeyRemapperCreator.cpp  LowLevelProcObserver.cpp  LowLevelProcSubject.cpp  Switcher.cpp  SwitchersStorage.cpp  SwitchersStorageCreator.cpp
KeyRemapper/src/Keyboard/: KeyboardKeyEventReplacer.cpp  KeyboardKeyHandler.cpp
include/: ExtraInfo.h  KeyHandler.h  KeyRemapper.h  Switcher.h  SwitchersStorage.h  SwitchersStorageCreator.h
src/: KeyHandler.cpp  KeyRemapper.cpp  Switcher.cpp  SwitchersStorage.cpp  SwitchersStorageCreator.cpp
(+2 files in other folders)
